themes/custom/rendroid/css/main.css
/*=====================================================
       Corporate Agency Website Stylesheet
             Body Core Stylesheet
======================================================*/

* {
    -webkit-box-sizing: border-box;
    -moz-box-sizing: border-box;
    box-sizing: border-box
}

*:before,
*:after {
    -webkit-box-sizing: border-box;
    -moz-box-sizing: border-box;
    box-sizing: border-box
}

body {
    width: 100%;
    height: auto;
    margin: 0px;
    padding: 0px;
    color: black;
    position: relative;
    overflow-x: hidden;
    background-color: white;
    font-family: 'Montserrat', sans-serif;
    position: relative;
    overflow-x: hidden;
}

body,
html {
    height: 100%;
}

.nav .open > a,
.nav .open > a:hover,
.nav .open > a:focus {
    background-color: transparent;
}

.row {
    margin-right: 0;
    margin-left: 0;
}



.btn:focus,
.btn:active {
    outline: none !important;
    box-shadow: none;
}

h1,
h2,
h3,
h4,
h5,
h6,
ul {
    margin: 0px;
    padding: 0px
}

ul {
    list-style-type: none;
    margin: 0;
    padding: 0;
    display: block;
}

li {
    display: list-item;
}

a:hover {
    text-decoration: none;
}

hr{
  margin-top: 20px;
  margin-bottom: 55px;
  border: 0;
  border-top: 3px solid #eee;
  width: 100%;
}

/* scrolltop */

.scrolltop {
    display: none;
    width: 100%;
    margin: 0 auto;
    position: fixed;
    bottom: 20px;
    z-index: 99;
    right: 10px;
}

.scroll {
    position: absolute;
    right: 20px;
    bottom: 20px;
    background: #03b9b3;
    padding: 12px;
    text-align: center;
    margin: 0 0 0 0;
    cursor: pointer;
    transition: 0.5s;
    -moz-transition: 0.5s;
    -webkit-transition: 0.5s;
    -o-transition: 0.5s;
}

.scroll:hover {
    background: #00fff7;
    transition: 0.5s;
    -moz-transition: 0.5s;
    -webkit-transition: 0.5s;
    -o-transition: 0.5s;
}

.scroll:hover .fa {
    padding-top: -10px;
}

.scroll .fa {
    font-size: 30px;
    margin-top: -5px;
    margin-left: 1px;
    transition: 0.5s;
    -moz-transition: 0.5s;
    -webkit-transition: 0.5s;
    -o-transition: 0.5s;
}

/*== Node details Slider Image ==*/

#div-image img{
    height: 500px;
    width: 100%;
    border-radius: 1em;
    padding: 3px;
}

/*== Youtube ==*/
.yt {
    margin-top: 1em;
    background-color: black;
    text-align: center;
}


/*== Navbar ==*/

.navbar {
    margin: 0;
    border-radius: 0;
}

.navbar-inverse {
    background-color: rgba(0, 0, 0, 0.91);
    border: none;
}

.navbar-brand > img {
  margin-top: -25px;
  height: 100px;
}

.navbar li {
    line-height: 5.5em;
    color: white;
}

.navbar .hidden-xs {
    font-weight: 700;
    line-height: 72px;
    font-size: 11px;
    color: #d7d7d7;
}

.navbar-inverse .navbar-nav > li > a {
    color: rgba(255, 255, 255, 0.92);
    text-transform: uppercase;
    font-size: 11px;
    font-weight: 600;
    letter-spacing: 1px;
    line-height: 4;
}

.navbar-inverse .navbar-nav > li > a:hover,
.navbar .hidden-xs:hover {
    color: rgb(2, 228, 230);
}

.banner {
    display: flex;
    justify-content: center;
    align-items: center;
    color: #fff;
    padding-top: 90px;
    position: relative;
    text-transform: uppercase;
    margin-bottom: -7em;
   /* background-position: center;
    background-size: cover;
    background-repeat: no-repeat;
    background-image: url('/sites/default/files/header/header.jpg');*/
}

#block-headerimagetouristspot-2{
    height: 9em;
}
#block-headerimageschools{
    height: 12em;
}
#block-headerschool {
  height: 12em;
}


#blog .fb-profile-picture img{
    margin-bottom: 0;
    width: 160px;
}
#blog .fb-fullname h5{
    padding: 0;
    margin: 0;
}

.social-media{
    margin-left: 7em;
}

#map .social-media{
    text-align: center;
    margin-left: 0;
}
#services .social-media{
    margin-bottom: 2em;
}

.card {
    height: 480px;
    margin-bottom: 1em;
    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
    transition: 0.3s;
}

.card:hover {
    box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
}

.card .container {
  padding: 2em;
}
.card img{
  width: 100%;
}

.card h4:nth-child(1){
  padding-bottom: 0;
  margin-right: 5em;
  float: left;
}

.card h4:nth-child(2){
  padding-bottom: 0;
  margin-right: 4px;
  float: left;
}

.card h6{
  padding-top: 6px;
}

.card-row{
  margin-bottom: 1em;
}

/* .card-row .container{
  padding:0;
} */

.card-row h5{
  font-size: xx-large;
  text-align: center;
  padding: 1em;
}

.social-media .fb-profile-picture img{
    border-radius: 100px;
    margin-top: 1em;
}

.social-media .fb-fullname{
    margin-top:1em;
}
.social-media .fb-like{
    margin-top: 1em;
}
.social-media  .twitter{
    margin-top: 1em;
}

.banner .gradient {
    background: -moz-linear-gradient(0deg,rgba(239, 218, 185, .5) 0%,rgba(0,24,255,0.5) 100%);
    background: -webkit-linear-gradient(0deg,rgba(239, 218, 185, .5) 0%,rgba(0,24,255,0.5) 100%);
    background: linear-gradient(0deg,rgba(239, 218, 185, .5) 0%,rgba(0,24,255,0.5) 100%);
    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#80ff00fb', endColorstr='#800018ff', GradientType=1);
    position: absolute;
    width: 100%;
    height: 100%;
    top: 0;
}

.banner h1 {
    font-size: 47px;
    font-weight: 700;
    letter-spacing: 4px;
    padding-bottom: 12px;
}

.banner p {
    font-size: 24px;
    font-weight: 600;
    letter-spacing: 3px;
    padding-bottom: 35px;
}

.banner p .btn-primary,
.btn-success {
    width: 162px;
    color: #000;
    border: none;
    font-size: 13px;
    font-weight: 700;
    margin-right: 10px;
    padding: 19px 0;
    border-radius: 3px;
    letter-spacing: 1px;
    background-color:gray;
}

.btn:hover {
        transition: .5s ease;
        background-color: black;
        color: white;
}

.banner p .btn-primary:hover {
   transition: .5s ease;
   background-color: black;
   color: white;
}

.banner p .btn-success {
    background-color: gray;
    margin-right: 0;
}
/* ... */

